--- a/css/main.css
+++ b/css/main.css
@@ -1191,6 +1191,14 @@
       -ms-flex-align: center;
           align-items: center;
 }
+@media (min-width: 1200px) {
+  .footer-socials {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-right: 94px;
+  }
+}
 
 .footer-title {
   color: var(--white-color);
@@ -1251,6 +1259,13 @@
       -ms-flex-align: center;
           align-items: center;
 }
+@media (min-width: 1200px) {
+  .footer-input {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
 
 @media (min-width: 480px) {
   .form-footer {
@@ -1262,6 +1277,17 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media (min-width: 1200px) {
+  .form-footer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1284,6 +1310,11 @@
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 1200px) {
+  .form-footer__input {
+    width: 358px;
+  }
 }
 .form-footer__input:hover, .form-footer__input:focus {
   border-color: var(--accent-color);
