--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -3,6 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width:1200px){
+    display: inline-flex;
+  }
 }
 
 .form-footer {
@@ -11,8 +15,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-  // display: flex;
+  }
+
+  @media (min-width:1200px){
+    flex-direction: row;
+    align-items:center ;
+  }
 
   &__icon {
     fill: var(--white-color);
@@ -31,7 +39,10 @@
   
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+    
+    @media (min-width:1200px){
+      width: 358px;
+    }
     &:hover,
     &:focus {
       border-color: var(--accent-color);
@@ -64,10 +75,6 @@
     }
   }
 }
-
-// .footer-input {
-//   // margin-left: 93px;
-// }
 
 .footer-title {
   color: var(--white-color);
