--- a/sass/components/_footer-socials.scss
+++ b/sass/components/_footer-socials.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width:1200px){
+    align-items: flex-start;
+    margin-right: 94px;
+  }
 }
 
 .footer-title {
