--- a/css/main.css
+++ b/css/main.css
@@ -397,6 +397,9 @@
   padding-right: 10px;
   padding-left: 10px;
 }
+.menu-socials__link :last-child {
+  border-right: hidden;
+}
 
 /*Main-section*/
 .section {
@@ -404,11 +407,16 @@
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/bg\ image.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg\ image.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/bg\ image.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg\ image.jpg);
+}
+@media (min-resolution) {
+  .section .section {
+    background-image: url(../);
+  }
 }
 .section__headline {
   margin-left: auto;
