--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,58 +3,117 @@
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1600px;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/bg\ image.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 1600px;
 
-  &__headline {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom: 30px;
-    max-width: 696px;
-    text-align: center;
-    color: var(--white-color);
-    font-family: Roboto, sans-serif;
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 1.6;
-    text-transform: uppercase;
-    letter-spacing: 0.06em;
-
-    @media (min-width:1200px){
-      font-size: 44px;
-      line-height: 1.36;
-
+    @media (min-width: 480px) {
+      max-width: 480px;
+      height: 400px;
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../images/hero-mobile.jpg);
+      background-size: 480px, 400px;
     }
+      
+          @media (min-device-pixel-ratio: 2),
+          (min-resolution: 192dpi),
+          (min-resolution: 2dppx) {
+          background-image: linear-gradient(to right,
+              rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)),
+            url(../images/hero-mobile@2x.jpg);
+        }
+    
+    @media (min-width: 768px) {
+      max-width: 768px;
+      height: 400px;
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../images/hero-tablet.jpg);
+      background-size: 768px, 400px;
+      
+          @media (min-device-pixel-ratio: 2),
+          (min-resolution: 192dpi),
+          (min-resolution: 2dppx) {
+          background-image : linear-gradient (to right,
+              rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)),
+            url(../images/hero-tablet@2x.jpg);
+        }
+    }
+    
+    @media (min-width: 1200px) {
+      max-width :1600px;
+      height :600px;
+      background-image :linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../images/hero-desktop.jpg);
+      background-size: 1600px, 600px;
+      
+          @media (min-device-pixel-ratio: 2),
+          (min-resolution: 192dpi),
+          (min-resolution: 2dppx) {
+          background-image :linear-gradient (to right,
+              rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)),
+            url(../images/hero-desktop@2x.jpg);
+        }
+    }
+}
+
+
+
+
+&__headline {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 30px;
+  max-width: 696px;
+  text-align: center;
+  color: var(--white-color);
+  font-family: Roboto, sans-serif;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.6;
+  text-transform: uppercase;
+  letter-spacing: 0.06em;
+
+  @media (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
   }
+}
 
-  &__button-active {
-    min-width: 200px;
-    height: 50px;
-    padding: 10px 24px;
-    border-radius: 4px;
-    border: 1px solid transparent;
-    font-family: inherit;
-    color: var(--white-color);
-    font-weight: 700;
-    background-color: var(--accent-color);
-    font-size: 16px;
-    line-height: 1.6;
-    cursor: pointer;
-    letter-spacing: 0.06em;
-    text-align: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+&__button-active {
+  min-width: 200px;
+  height: 50px;
+  padding: 10px 24px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  font-family: inherit;
+  color: var(--white-color);
+  font-weight: 700;
+  background-color: var(--accent-color);
+  font-size: 16px;
+  line-height: 1.6;
+  cursor: pointer;
+  letter-spacing: 0.06em;
+  text-align: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-      background-color: #188ce8;
-    }
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
   }
 }
