--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -101,5 +101,13 @@
     border-right: 1px solid rgba(33, 33, 33, 0.2);
     padding-right: 10px;
     padding-left: 10px;
+
+    &:last-child{
+      border-right: hidden;
+    }
   }
+
+
+
+  
 }
