--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -9,8 +9,7 @@
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+      rgba(47, 48, 58, 0.4)),
     url(../images/bg\ image.jpg);
 
     @media (min-width: 480px) {
@@ -20,8 +19,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)),
         url(../images/hero-mobile.jpg);
-      background-size: 480px, 400px;
-    }
+      background-size: 480px, 400px;}
       
           @media (min-device-pixel-ratio: 2),
           (min-resolution: 192dpi),
@@ -29,8 +27,7 @@
           background-image: linear-gradient(to right,
               rgba(47, 48, 58, 0.4),
               rgba(47, 48, 58, 0.4)),
-            url(../images/hero-mobile@2x.jpg);
-        }
+            url(../images/hero-mobile@2x.jpg);}
     
     @media (min-width: 768px) {
       max-width: 768px;
@@ -47,8 +44,7 @@
           background-image : linear-gradient (to right,
               rgba(47, 48, 58, 0.4),
               rgba(47, 48, 58, 0.4)),
-            url(../images/hero-tablet@2x.jpg);
-        }
+            url(../images/hero-tablet@2x.jpg);}
     }
     
     @media (min-width: 1200px) {
