--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -98,12 +98,15 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 1.2;
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-    padding-right: 10px;
-    padding-left: 10px;
+    // border-right: 1px solid rgba(33, 33, 33, 0.2);
+    // padding-right: 10px;
+    // padding-left: 10px;
 
-    &:last-child{
-      border-right: hidden;
+    &__link:not(:last-child){
+      margin-right: 10px;
+      border-right: 1px solid var(--accent-color);
+      padding-right: 10px;
+      
     }
   }
 
