--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,24 +6,28 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
+  background-size:cover;
   background-image: linear-gradient(to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
     url(../images/bg-image.jpg);
 
   @media (min-width: 480px) {
-    max-width: 480px;
-    height: 400px;
+    // max-width: 480px;
+    // height: 400px;
+    // width: 100%;
+    background-size:cover;
     background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
       url(../images/hero-mobile.jpg);
-    background-size: 480px, 400px;
+    // background-size: 480px, 400px;
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
+    background-size:cover;
     background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
@@ -31,17 +35,19 @@
   }
 
   @media (min-width: 768px) {
-    max-width: 768px;
-    height: 400px;
+    // max-width: 768px;
+    // height: 400px;
+    background-size:cover;
     background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
       url(../images/hero-tablet.jpg);
-    background-size: 768px, 400px;
+    // background-size: 768px, 400px;
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
+      background-size:cover; 
       background-image: linear-gradient(to right,
        rgba(47, 48, 58, 0.4), 
        rgba(47, 48, 58, 0.4)),
@@ -50,17 +56,19 @@
   }
 
   @media (min-width: 1200px) {
-    max-width: 1600px;
-    height: 600px;
+    background-size:cover;
+    // max-width: 1600px;
+    // height: 600px;
     background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
       url(../images/hero-desktop.jpg);
-    background-size: 1600px, 600px;
+    // background-size: 1600px, 600px;
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
+      background-size:cover;
       background-image: linear-gradient(to right,
       rgba(47, 48, 58, 0.4), 
       rgba(47, 48, 58, 0.4)),
