--- a/css/main.css
+++ b/css/main.css
@@ -302,10 +302,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  max-width: 480px;
-  max-height: 796px;
   width: 100%;
   height: 100%;
+  padding: 48px, 48px;
   background-color: var(--white-color);
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
@@ -345,7 +344,7 @@
   text-decoration: none;
   font-family: Roboto;
   font-size: 40px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--title-color);
@@ -357,6 +356,7 @@
 
 .menu-contact {
   margin-top: 306px;
+  margin-bottom: 0;
   list-style: none;
 }
 .menu-contact__item {
@@ -384,6 +384,7 @@
 
 .menu-socials {
   margin-top: 64px;
+  margin-bottom: 0;
   list-style: none;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -396,12 +397,12 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 1.2;
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.line {
+  color: rgba(33, 33, 33, 0.2);
   padding-right: 10px;
   padding-left: 10px;
-}
-.menu-socials__link:last-child {
-  border: none;
 }
 
 /*Main-section*/
