--- a/css/main.css
+++ b/css/main.css
@@ -61,9 +61,23 @@
   }
 }
 
+.container-mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+
 /*Header*/
 .header {
-  height: 60px;
+  min-height: 60px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: var(--border-color);
@@ -292,7 +306,6 @@
 
 .mobile-menu {
   overflow: hidden;
-  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
