--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header{
-  height: 60px;
+  min-height: 60px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: var(--border-color);
