--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -25,9 +25,13 @@
     }
   }
 
-  // .container-mobile{
-  //   // width: 480px;
-  //   // padding-left: 15px;
-  //   // padding-right: 15px;
+  .container-mobile{
+    // width: 480px;
+    // padding-left: 15px;
+    // padding-right: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 
-  // }
+  }
