--- a/css/main.css
+++ b/css/main.css
@@ -1517,13 +1517,25 @@ img {
   border: none;
   border-radius: 4px;
   position: relative;
-  width: 528px;
-  height: 581px;
+  width: 280px;
+  height: 609px;
   background-color: rgb(255, 255, 255);
   padding: 40px;
   overflow-y: auto;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 581px;
+  }
+}
+@media (min-width: 768px) {
+  .modal {
+    width: 528px;
+    height: 609px;
+  }
 }
 .modal__title {
   color: var(--title-color);
@@ -1612,7 +1624,15 @@ img {
   color: var(--accent-color);
   -webkit-text-decoration-skip-ink: none;
           text-decoration-skip-ink: none;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+@media (min-width: 480px) {
+  .form-field__active {
+    font-size: 14px;
+  }
 }
 
 .form-field__textarea {
@@ -1658,7 +1678,6 @@ img {
 
 .form__button {
   display: block;
-  margin-left: 124px;
   width: 200px;
   height: 50px;
   background-color: var(--accent-color);
@@ -1677,6 +1696,16 @@ img {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (min-width: 480px) {
+  .form__button {
+    margin-left: 100px;
+  }
+}
+@media (min-width: 768px) {
+  .form__button {
+    margin-left: 124px;
+  }
+}
 .form__button:hover, .form__button:focus {
   background-color: #188ce8;
 }
@@ -1685,9 +1714,16 @@ img {
   cursor: pointer;
   position: relative;
   padding-left: 20px;
-  font-size: 14px;
   color: var(--text-color);
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  line-height: 1.16;
+}
+@media (min-width: 480px) {
+  .form-field-checkbox-active {
+    font-size: 14px;
+  }
 }
 
 .form-field-checkbox {
@@ -1712,7 +1748,17 @@ img {
   border: 2px solid var(--title-color);
   border-radius: 2px;
   fill: transparent;
-  margin-right: 370px;
+  margin-right: 200px;
+}
+@media (min-width: 480px) {
+  .checkbox-icon {
+    margin-right: 370px;
+  }
+}
+@media (min-width: 480px) and (min-width: 768px) {
+  .checkbox-icon {
+    margin-right: 390px;
+  }
 }
 
 .checkbox:checked + .checkbox-icon {
