--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -44,7 +44,14 @@
   &__active {
     color: var(--accent-color);
     text-decoration-skip-ink: none;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+
+    @media (min-width:480px){
     font-size: 14px;
+    }
   }
 }
 
@@ -72,7 +79,6 @@
 
 .form__button {
   display: block;
-  margin-left: 124px;
   width: 200px;
   height: 50px;
   background-color: var(--accent-color);
@@ -89,6 +95,14 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  @media (min-width:480px){
+    margin-left: 100px;
+  }
+
+  @media (min-width:768px){
+    margin-left: 124px;
+  }
+
   &:hover,
   &:focus {
     background-color: #188ce8;
@@ -99,9 +113,17 @@
   cursor: pointer;
   position: relative;
   padding-left: 20px;
-  font-size: 14px;
   color: var(--text-color);
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  line-height: 1.16;
+
+  @media (min-width:480px){
   font-size: 14px;
+
+  }
+
 }
 
 .form-field-checkbox {
@@ -120,7 +142,15 @@
   border: 2px solid var(--title-color);
   border-radius: 2px;
   fill: transparent;
+  margin-right: 200px;
+
+  @media (min-width:480px){
   margin-right: 370px;
+
+  @media (min-width:768px){
+  margin-right: 390px;
+  }
+  }
 }
 
 .checkbox:checked + .checkbox-icon {
