--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,13 +8,23 @@
   border: none;
   border-radius: 4px;
   position: relative;
-  width: 528px;
-  height: 581px;
+  width:280px;
+  height:609px;
   background-color: rgba(255, 255, 255, 1);
   padding: 40px;
   overflow-y: auto;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  @media (min-width:480px){
+  width: 450px;
+  height: 581px;
+  }
+
+  @media (min-width:768px){
+    width: 528px;
+    height: 609px;
+    }
 
   &__title {
     color: var(--title-color);
